--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <p>Nasty words: slides that I didn't want in my notes (iClicker)</p>
               <p>ignoreThreshold: slides with just pictures</p>
               <p>Excluding elements: If the header and footer are consistently in the first or last few elements of the page</p>
-              <a href="https://github.com/right1/right1.github.io">Github page</a>
+              <a href="https://github.com/right1/pdftonotes">Github page</a>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
