added navbar, moved banners to navbar, changed styling of buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/css/bootstrap3/bootstrap-switch.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/css/bootstrap3/bootstrap-switch.min.css"
+    rel="stylesheet">
   <style>
     textarea {
       position: absolute;
@@ -51,10 +52,30 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <h2>PDF to notes</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="container">
-    <div style="visibility:hidden; opacity:0" id="dropzone" class="dropzone"></div>
-    <div>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="https://right1.github.io">My Homepage<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/right1/pdftonotes">Source code <img style="height:1.5rem" src="https://raw.githubusercontent.com/right1/right1.github.io/master/assets/img/github-logo.png"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="modal" data-target="#info">Info</a>
+          </li>
+        </ul>
+      </div>
       <div id="blueBanner" style="display:none" class="alert alert-primary" role="alert">
         <span id="bannerText_blue">Open the Options Menu for better results. Now added quizlet support.</span>
       </div>
@@ -64,29 +85,45 @@
       <div id="redBanner" style="display:none" class="alert alert-danger" role="alert">
         <span id="bannerText_red"></span>
       </div>
-      <h1>PDF to notes </h1>
-      <label class="btn btn-danger btn-file" style="display:inline-block">
+    </div>
+
+  </nav>
+  <div class="container">
+    <div style="visibility:hidden; opacity:0" id="dropzone" class="dropzone"></div>
+    <div>
+      <div style="height:1rem"></div>
+      <label class="btn btn-outline-danger btn-file" style="display:inline-block">
         <span id="filename">Click to select file (or drag and drop)</span><input type="file" id="pdfUpload" name="pdfUpload"
           accept=".pdf" style="display: none;">
       </label>
-      <label id="btnConvert" class="btn btn-success">Convert</label>
-      <label id="btnCopy" class="btn btn-primary">Copy to clipboard</label>
-      <label class="btn btn-warning" data-toggle="modal" data-target="#options">Options</label>
-      <label class="btn btn-info" data-toggle="modal" data-target="#info">Info</label>
-      
+      <label id="btnConvert" class="btn btn-outline-success">Convert</label>
+      <label id="btnCopy" class="btn btn-outline-primary">Copy to clipboard</label>
+      <label class="btn btn-outline-warning" data-toggle="modal" data-target="#options">Options</label>
+
+
       <br>
-      <button type="button" id="suggestedSplitterBtn" class="btn btn-info" data-toggle="tooltip" data-placement="right" title="leave empty to use these, click on one to remove, click this button to copy all bullet points">
+      <button type="button" id="suggestedSplitterBtn" class="btn btn-info" data-toggle="tooltip" data-placement="right"
+        title="leave empty to use these, click on one to remove, click this button to copy all bullet points">
         <span id="suggestedSplitterBtn_text">Suggested Bullet Points </span><span class="badge bg-dark" style="font-size:1em">&#9432;</span>
       </button>
       <!--
-      --><code id="suggestedSplitter1" class="suggestedSplitter">Detected bullet points will appear here</code><!--
-      --><div style="display:inline-block;width:3vh"></div>
+      --><code id="suggestedSplitter1" class="suggestedSplitter">Detected bullet points will appear here</code>
       <!--
-      --><code id="suggestedSplitter2" class="suggestedSplitter">Click to remove</code><!--
-      --><div style="display:inline-block;width:3vh"></div><!--
-      --><code id="suggestedSplitter3" class="suggestedSplitter">If results turn out weird, copy paste the bullet points directly into the boxes below (separate with comma)</code><!--
-      --><div style="display:inline-block;width:3vh"></div><!--
-      --><code id="suggestedSplitter4" class="suggestedSplitter"></code><!--
+      -->
+      <div style="display:inline-block;width:3vh"></div>
+      <!--
+      --><code id="suggestedSplitter2" class="suggestedSplitter">Click to remove</code>
+      <!--
+      -->
+      <div style="display:inline-block;width:3vh"></div>
+      <!--
+      --><code id="suggestedSplitter3" class="suggestedSplitter">If results turn out weird, copy paste the bullet points directly into the boxes below (separate with comma)</code>
+      <!--
+      -->
+      <div style="display:inline-block;width:3vh"></div>
+      <!--
+      --><code id="suggestedSplitter4" class="suggestedSplitter"></code>
+      <!--
       --><br></br>
       <div class="row container-fluid">
         <div class="column3">
@@ -133,9 +170,11 @@
               <p>1. Use the 'copy to clipboard' button</p>
               <p>2. Go<a href="https://quizlet.com/create-set"> here</a></p>
               <p>3. Click Import from Word, Excel, Google Docs, etc.</p>
-              <p>4. Use custom for both options, option 1 (between term and definition): type "^^^", option 2 (between cards): type ";;;"</p>
+              <p>4. Use custom for both options, option 1 (between term and definition): type "^^^", option 2 (between
+                cards): type ";;;"</p>
               <p>5. Paste into the 'Import your data' Box</p>
-              <p>To set parameters to include/exclude elements (headers, footers, specific words, etc.), be sure to explore the options and info menus</p>
+              <p>To set parameters to include/exclude elements (headers, footers, specific words, etc.), be sure to
+                explore the options and info menus</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -159,7 +198,8 @@
               <p>2. Paste into an empty file</p>
               <p>3. Select (highlight) the content you just pasted (Ctrl+A for an empty file)</p>
               <p>4. Enable the list formatting option<img src="https://puu.sh/BHK17/ffefb78022.png" alt="Google docs pic"></p>
-              <p>To set parameters to include/exclude elements (headers, footers, specific words, etc.), be sure to explore the options and info menus</p>
+              <p>To set parameters to include/exclude elements (headers, footers, specific words, etc.), be sure to
+                explore the options and info menus</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -180,12 +220,14 @@
             </div>
             <div class="modal-body">
               <p>IMPORTANT: This will only work on documents with highlightable text.</p>
-              <p>Quizlet Support: Use the import option, then copy paste. Under "Between term and definition" select custom
+              <p>Quizlet Support: Use the import option, then copy paste. Under "Between term and definition" select
+                custom
                 and type "^^^" and for "Between cards" select custom and type ";;;"</p>
               <p>Other information: </p>
               <p>Bullet points: different bullet point box=different indentation.</p>
               <p>For numbered bullet points (1. 2. 3. ...) type NUM or type any number as the bullet point</p>
-              <p>To use multiple bullet points with the same indentation, separate them with a ',' in each respective box</p>
+              <p>To use multiple bullet points with the same indentation, separate them with a ',' in each respective
+                box</p>
               <p>How to paste (Tested in Docs and Word):</p>
               <p>1. Paste into an empty file</p>
               <p>2. Select (highlight) the content you just pasted (Ctrl+A for an empty file)</p>
@@ -195,7 +237,8 @@
               <p>Bad words: removing a header from a slide</p>
               <p>Nasty words: slides that I didn't want in my notes (iClicker)</p>
               <p>ignoreThreshold: slides with just pictures</p>
-              <p>Excluding elements: If the header and footer are consistently in the first or last few elements of the page</p>
+              <p>Excluding elements: If the header and footer are consistently in the first or last few elements of the
+                page</p>
               <a href="https://github.com/right1/pdftonotes">Github page</a>
             </div>
             <div class="modal-footer">
@@ -218,49 +261,50 @@
             <div class="modal-body">
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Copy paste to create flashcards, see info for more details">
-                  Quizlet Format<div style="display:inline-block;width:3%"></div></span></div>
+                    Quizlet Format<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column" id="quizletParent"><input name="bsswitch" type="checkbox" id="quizletFormat" value="option1"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Trims words that aren't necessary (the, and, etc.)">
-                  Trim Unnecessary Words<div style="display:inline-block;width:3%"></div></span></div>
+                    Trim Unnecessary Words<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input name="bsswitch" type="checkbox" id="trimExtra" value="option1"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Automatically tries to remove page numbers">
-                  Remove page numbers<div style="display:inline-block;width:3%"></div></span></div>
-                <div class="column"><input name="bsswitch" type="checkbox" id="pageNumberDetection" value="option1" checked></div>
+                    Remove page numbers<div style="display:inline-block;width:3%"></div></span></div>
+                <div class="column"><input name="bsswitch" type="checkbox" id="pageNumberDetection" value="option1"
+                    checked></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="If pdf uses numbers as bullet points, this is what comes after the number">
-                  Num Delim<div style="display:inline-block;width:3%"></div></span></div>
+                    Num Delim<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input type="text" class="form-control" placeholder="Number delim" value="." id="numDelim"
                     type="text"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Pages with character count less than this will be excluded">
-                  Ignore threshold<div style="display:inline-block;width:3%"></div></span></div>
-                <div class="column"><input type="number" class="form-control" placeholder="ignore" id="ignoreThreshold" type="number"
-                    value="100"></div>
+                    Ignore threshold<div style="display:inline-block;width:3%"></div></span></div>
+                <div class="column"><input type="number" class="form-control" placeholder="ignore" id="ignoreThreshold"
+                    type="number" value="100"></div>
               </div>
 
               <div class="row">
                 <div class="column" style="width:25%"><span data-toggle="tooltip" data-placement="right" title="Excludes detected phrases. (Separate with ',')">
-                  Bad Words<div style="display:inline-block;width:3%"></div></span></div>
+                    Bad Words<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column" style="width:75%"><input type="text" class="form-control" placeholder="Separate with ','"
                     id="badWords" type="text"></div>
               </div>
               <div class="row">
                 <div class="column" style="width:25%"><span data-toggle="tooltip" data-placement="right" title="Excludes detected pages/ slides. (Separate with ',')">
-                  Nasty Words<div style="display:inline-block;width:3%"></div></span></div>
+                    Nasty Words<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column" style="width:75%"><input type="text" class="form-control" placeholder="Separate with ','"
                     id="nastyWords" type="text"></div>
               </div>
               <div class="row">
-                <div class="column"><span data-toggle="tooltip" data-placement="right" title="Page to start at">Page start:<div
-                      style="display:inline-block;width:3%"></div></span></div>
-                <div class="column"><input type="number" class="form-control" placeholder="page start" id="pageStart" type="number"
-                    value="0"></div>
+                <div class="column"><span data-toggle="tooltip" data-placement="right" title="Page to start at">Page
+                    start:<div style="display:inline-block;width:3%"></div></span></div>
+                <div class="column"><input type="number" class="form-control" placeholder="page start" id="pageStart"
+                    type="number" value="0"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Page to end at">Page end:<div
@@ -270,13 +314,13 @@
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Experiment with this if there's an annoying header/footer on each page">
-                  Elements to exclude at beginning of page:<div style="display:inline-block;width:3%"></div></span></div>
+                    Elements to exclude at beginning of page:<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input type="number" class="form-control" placeholder="Exclude at beginning of page"
                     id="excludeStart" type="number" value="0"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Experiment with this if there's an annoying header/footer on each page">
-                  Elements to exclude at end of page:<div style="display:inline-block;width:3%"></div></span></div>
+                    Elements to exclude at end of page:<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input type="number" class="form-control" placeholder="Exclude at end of page" id="excludeEnd"
                     type="number" value="0"></div>
               </div>
@@ -285,12 +329,12 @@
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Adds line spacing automatically (Try if theres a lack of bullet points)">
-                  AutoAdd line spacing<div style="display:inline-block;width:3%"></div></span></div>
+                    AutoAdd line spacing<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input name="bsswitch" type="checkbox" id="addNewLine" value="option1"></div>
               </div>
               <div class="row">
                 <div class="column"><span data-toggle="tooltip" data-placement="right" title="Adds indentation after headers (Use if lack of bullet points after header)">
-                  Add tabs after headers<div style="display:inline-block;width:3%"></div></span></div>
+                    Add tabs after headers<div style="display:inline-block;width:3%"></div></span></div>
                 <div class="column"><input name="bsswitch" type="checkbox" id="headerDelim" value="option1"></div>
               </div>
 
