--- a/index.html
+++ b/index.html
@@ -102,29 +102,32 @@
 
 
       <br>
-      <button type="button" id="suggestedSplitterBtn" class="btn btn-info" data-toggle="tooltip" data-placement="right"
-        title="leave empty to use these, click on one to remove, click this button to copy all bullet points">
-        <span id="suggestedSplitterBtn_text">Suggested Bullet Points </span><span class="badge bg-dark" style="font-size:1em">&#9432;</span>
-      </button>
-      <!--
-      --><code id="suggestedSplitter1" class="suggestedSplitter">Detected bullet points will appear here</code>
-      <!--
-      -->
-      <div style="display:inline-block;width:3vh"></div>
-      <!--
-      --><code id="suggestedSplitter2" class="suggestedSplitter">Click to remove</code>
-      <!--
-      -->
-      <div style="display:inline-block;width:3vh"></div>
-      <!--
-      --><code id="suggestedSplitter3" class="suggestedSplitter">If results turn out weird, copy paste the bullet points directly into the boxes below (separate with comma)</code>
-      <!--
-      -->
-      <div style="display:inline-block;width:3vh"></div>
-      <!--
-      --><code id="suggestedSplitter4" class="suggestedSplitter"></code>
-      <!--
-      --><br></br>
+      <div style="display:none">
+          <button type="button" id="suggestedSplitterBtn" class="btn btn-info" data-toggle="tooltip" data-placement="right"
+          title="leave empty to use these, click on one to remove, click this button to copy all bullet points">
+          <span id="suggestedSplitterBtn_text">Suggested Bullet Points </span><span class="badge bg-dark" style="font-size:1em">&#9432;</span>
+        </button>
+        <!--
+        --><code id="suggestedSplitter1" class="suggestedSplitter">Detected bullet points will appear here</code>
+        <!--
+        -->
+        <div style="display:inline-block;width:3vh"></div>
+        <!--
+        --><code id="suggestedSplitter2" class="suggestedSplitter">Click to remove</code>
+        <!--
+        -->
+        <div style="display:inline-block;width:3vh"></div>
+        <!--
+        --><code id="suggestedSplitter3" class="suggestedSplitter">If results turn out weird, copy paste the bullet points directly into the boxes below (separate with comma)</code>
+        <!--
+        -->
+        <div style="display:inline-block;width:3vh"></div>
+        <!--
+        --><code id="suggestedSplitter4" class="suggestedSplitter"></code>
+        <!--
+        -->
+      </div>
+      <br></br>
       <div class="row container-fluid">
         <div class="column3">
 
