--- a/index.html
+++ b/index.html
@@ -92,27 +92,27 @@
     <div style="visibility:hidden; opacity:0" id="dropzone" class="dropzone"></div>
     <div>
       <div style="height:1rem"></div>
-      <button class="btn btn-outline-danger btn-file" style="display:inline-block">
-        <span id="filename">Click to select file (or drag and drop)</span><input type="file" id="pdfUpload" name="pdfUpload"
-          accept=".pdf" style="display: none;">
-      </button>
-      <button id="btnConvert" class="btn btn-outline-success">Convert</button>
+      <label class="btn btn-outline-danger btn-file center-block mb-0" for="pdfUpload">
+
+        <span id="filename">Select file (or drag and drop)</span>
+      </label>
+      <input type="file" id="pdfUpload" name="pdfUpload" accept=".pdf" style="display: none;">
+      <button id="btnConvert" class="btn btn-outline-success center-block">Convert</button>
       <button id="btnCopy" class="btn btn-outline-primary">Copy to clipboard</button>
       <button class="btn btn-outline-warning" data-toggle="modal" data-target="#options">Options</button>
 
-
-      <br>
+      <div style="height:2rem"></div>
       <div class="row container-fluid">
         <div class="column">
           <p>Highest bullet point</p>
         </div>
         <div class="column">
-            <input style="width:90%" class="form-control" placeholder="Bullet Points (1)" id="splitter1" type="text">
+          <input style="width:90%" class="form-control" placeholder="Bullet Points (1)" id="splitter1" type="text">
         </div>
       </div>
       <div class="row container-fluid">
         <div class="column">
-            <p>Second bullet point</p>
+          <p>Second bullet point</p>
         </div>
         <div class="column">
           <input style="width:90%" class="form-control" placeholder="Bullet Points (2)" id="splitter2" type="text">
@@ -121,7 +121,7 @@
       <div class="row container-fluid">
         <div class="column">
 
-            <p>Third bullet point</p>
+          <p>Third bullet point</p>
         </div>
         <div class="column">
           <input style="width:90%" class="form-control" placeholder="Bullet Points (3)" id="splitter3" type="text">
