forgot to change name in html

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/js/bootstrap-switch.min.js"></script>
   <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
-  <script src="js/pdftolist.js"></script>
+  <script src="js/pdftonotes.js"></script>
 </body>
 
 </html>
