now shows actual flashcards instead of text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     .column {
       width: 50%
     }
-
     .column3 {
       width: 33%
     }
@@ -158,6 +157,7 @@
       </label>
       <hr>
       </hr>
+      <div id="flashCards"></div>
       <pre id="result">Result will go here</pre>
       
 
