--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     .column {
       width: 50%
     }
+    .f-right{
+      float:center;
+    }
+    .t-center{
+      text-align:center;
+    }
     .column3 {
       width: 33%
     }
