--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
       <!--MODALS -->
       <!-- HOWTO FOR QUIZLET -->
-      <div class="modal" id="quizletInfo" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
+      <div class="modal fade" id="quizletInfo" tabindex="-1" role="dialog">
+        <div class="modal-dialog " role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">How to use (Quizlet)</h5>
@@ -196,7 +196,7 @@
 
       </div>
       <!-- HOWTO FOR DOCS/WORD -->
-      <div class="modal" id="help" tabindex="-1" role="dialog">
+      <div class="modal fade" id="help" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -221,7 +221,7 @@
 
       </div>
       <!-- MAIN INFO MENU -->
-      <div class="modal" id="info" tabindex="-1" role="dialog">
+      <div class="modal fade" id="info" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -261,7 +261,7 @@
 
       </div>
       <!--OPTIONS MENU-->
-      <div class="modal" id="options" tabindex="-1" role="dialog">
+      <div class="modal fade" id="options" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
