Processed newlines, removed beginning newline from card header

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </button>
       <hr>
       </hr>
-      <div id="flashCards"></div>
+      <div id="flashCards" style="white-space: pre-line"></div>
       <pre id="result">Result will go here</pre>
       
 
