Fixed pdf getting text with callback

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <!-- <button id="test" class="btn">click</button> -->
     <div style="visibility:hidden; opacity:0" id="dropzone" class="dropzone"></div>
     <div>
+      <div id="copyArea"></div>
       <div style="height:1rem"></div>
       <label class="btn btn-outline-danger btn-file center-block mb-0" for="pdfUpload">
 
