--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/js/bootstrap-switch.min.js"></script>
-  <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+  <script src="js/pdf.worker.js"></script>
+  <script src="js/pdf.js"></script>
   <script src="js/pdftonotes.js"></script>
 </body>
 
